corrected the font and mobile overflow

--- a/style.css
+++ b/style.css
@@ -710,6 +710,7 @@ body {
   padding: 0;
   overflow-x: hidden;
   line-height: 1.5;
+  min-width: 100%;
 }
 
 img {
@@ -2778,8 +2779,9 @@ img {
   right: 0;
   left: 0;
   height: 100vh;
-width: 100%;
-overflow-x: hidden;
+/* width: 100%; */
+/* min-width: 100%;
+overflow-x: hidden; */
   z-index: 0;
 
   opacity: 1;
